        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

- Add an experimental <<opentelemetry-bridge>>.  Briefly, the OpenTelemetry
  Bridge allows one to use the vendor-neutral
  https://opentelemetry.io/docs/instrumentation/js/api/[OpenTelemetry Tracing
  API] (https://www.npmjs.com/package/@opentelemetry/api[`@opentelemetry/api`])
  to manually instrument your code, and have the Elastic Node.js APM agent
  handle those API calls. ({pull}2641[#2641])

[float]
===== Bug fixes


[[release-notes-3.33.0]]
==== 3.33.0 2022/05/05

[float]
===== Features

- Pulled the `traceparent` NPM module into a local module and replaced the
  `random-poly-fill` module with the built in `require('crypto').randomFillSync`
  function call ({pull}2669[#2669])

- Add a `parent` option to `agent.captureError(err[, options][, cb])` to allow
  passing in a Transaction or Span to use as the parent for the error. Before
  this change the *current* span or transaction, if any, was always used.
+
This option is not documented in the user docs, nor added to the TypeScript
types, because it is only expected to be useful for coming OTel Bridge work.

[float]
===== Bug fixes

- Fix a possible crash in the instrumentation of an incoming HTTP/2 request: if
  the underlying Http2Session was destroyed before the APM transaction was
  ended (on Http2Stream end). This resulted in the instrumentation using the
  [`stream.session.socket`](https://nodejs.org/api/http2.html#http2sessionsocket)
  proxy, which can throw `ERR_HTTP2_SOCKET_UNBOUND` after the session is
  destroyed. ({issues}2670[#2670])

[float]
===== Chores
