@@ -4,7 +4,6 @@ var fs = require('fs')
 var path = require('path')
 
 var ElasticAPMHttpClient = require('elastic-apm-http-client')
-var readPkgUp = require('read-pkg-up')
 var truncate = require('unicode-byte-truncate')
 
 const REDACTED = require('./constants').REDACTED
@@ -551,32 +550,82 @@ function validateServiceName (s) {
   }
 }
 
-// getPkg() attempts to find a "package.json" file (looking up from the current
-// working directory), read it, and return an object of the form:
+// findPkgInfo() looks up from the script dir (or cwd) for a "package.json" file
+// from which to load the name and version. It returns:
 //    {
-//      path: "/the/full/path/to/package.json",
-//      packageJson: { /* the loaded package.json object */ }
+//      startDir: "<full path to starting dir>",
+//      path: "/the/full/path/to/package.json",  // may be null
+//      data: {
+//        name: "<the package name>",            // may be missing
+//        version: "<the package version>"       // may be missing
+//      }
 //    }
-let pkgCache
-function getPkg () {
-  if (pkgCache === undefined) {
-    pkgCache = readPkgUp.sync() || null
+let pkgInfoCache
+function findPkgInfo () {
+  if (pkgInfoCache === undefined) {
+    // Determine a good starting dir from which to look for a "package.json".
+    let startDir = require.main && require.main.filename && path.dirname(require.main.filename)
+    if (!startDir && process.argv[1]) {
+      // 'require.main' is undefined if the agent is preloaded with `node
+      // --require elastic-apm-node/... script.js`.
+      startDir = path.dirname(process.argv[1])
+    }
+    if (!startDir) {
+      process.cwd()
+    }
+    pkgInfoCache = {
+      startDir,
+      path: null,
+      data: {}
+    }
+
+    // Look up from the starting dir for a "package.json".
+    const { root } = path.parse(startDir)
+    let dir = startDir
+    while (true) {
+      const pj = path.resolve(dir, 'package.json')
+      if (fs.existsSync(pj)) {
+        pkgInfoCache.path = pj
+        break
+      }
+      if (dir === root) {
+        break
+      }
+      dir = path.dirname(dir)
+    }
+
+    // Attempt to load "name" and "version" from the package.json.
+    if (pkgInfoCache.path) {
+      try {
+        const data = JSON.parse(fs.readFileSync(pkgInfoCache.path))
+        if (data.name) {
+          // For backward compatibility, maintain the trimming done by
+          // https://github.com/npm/normalize-package-data#what-normalization-currently-entails
+          pkgInfoCache.data.name = data.name.trim()
+        }
+        if (data.version) {
+          pkgInfoCache.data.version = data.version
+        }
+      } catch (_err) {
+        // Silently leave data empty.
+      }
+    }
   }
-  return pkgCache
+  return pkgInfoCache
 }
 
 function serviceNameFromPackageJson () {
-  const pkg = getPkg()
-  if (!pkg) {
-    throw new Error(`could not infer serviceName: could not find package.json up from ${process.cwd()}`)
+  const pkg = findPkgInfo()
+  if (!pkg.path) {
+    throw new Error(`could not infer serviceName: could not find package.json up from ${pkg.startDir}`)
   }
-  if (!pkg.packageJson.name) {
+  if (!pkg.data.name) {
     throw new Error(`could not infer serviceName: "${pkg.path}" does not contain a "name"`)
   }
-  if (typeof pkg.packageJson.name !== 'string') {
+  if (typeof pkg.data.name !== 'string') {
     throw new Error(`could not infer serviceName: "name" in "${pkg.path}" is not a string`)
   }
-  let serviceName = pkg.packageJson.name
+  let serviceName = pkg.data.name
 
   // Normalize a namespaced npm package name, '@ns/name', to 'ns-name'.
   const match = /^@([^/]+)\/([^/]+)$/.exec(serviceName)
@@ -596,24 +645,24 @@ function serviceNameFromPackageJson () {
     serviceName = null
   }
   if (!serviceName) {
-    throw new Error(`could not infer serviceName from name="${pkg.packageJson.name}" in "${pkg.path}"`)
+    throw new Error(`could not infer serviceName from name="${pkg.data.name}" in "${pkg.path}"`)
   }
 
   return serviceName
 }
 
 function serviceVersionFromPackageJson () {
-  const pkg = getPkg()
-  if (!pkg) {
-    throw new Error(`could not infer serviceVersion: could not find package.json up from ${process.cwd()}`)
+  const pkg = findPkgInfo()
+  if (!pkg.path) {
+    throw new Error(`could not infer serviceVersion: could not find package.json up from ${pkg.startDir}`)
   }
-  if (!pkg.packageJson.version) {
-    throw new Error(`could not infer serviceName: "${pkg.path}" does not contain a "version"`)
+  if (!pkg.data.version) {
+    throw new Error(`could not infer serviceVersion: "${pkg.path}" does not contain a "version"`)
   }
-  if (typeof pkg.packageJson.version !== 'string') {
-    throw new Error(`could not infer serviceName: "version" in "${pkg.path}" is not a string`)
+  if (typeof pkg.data.version !== 'string') {
+    throw new Error(`could not infer serviceVersion: "version" in "${pkg.path}" is not a string`)
   }
-  return pkg.packageJson.version
+  return pkg.data.version
 }
 
 function normalize (opts, logger) {
